--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,23 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'icon';
+  src: url('../fonts/icomoon.eot?7bdlzk');
+  src: url('../fonts/icomoon.eot?7bdlzk#iefix') format('embedded-opentype'), url('../fonts/icomoon.ttf?7bdlzk') format('truetype'), url('../fonts/icomoon.woff?7bdlzk') format('woff'), url('../fonts/icomoon.svg?7bdlzk#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 /*variables*/
+.icon-facebook:before {
+  content: "\e902";
+}
+.icon-home:before {
+  content: "\e903";
+}
+.icon-twitter:before {
+  content: "\e906";
+}
 /*-------mixins------*/
 /*-------mixins------*/
 * {
@@ -82,7 +98,7 @@ header {
 header .logo {
   display: inline-block;
   vertical-align: middle;
-  width: 15%;
+  width: 10%;
 }
 header nav {
   margin: 0 6%;
@@ -251,6 +267,24 @@ footer .social {
   position: relative;
   text-align: center;
 }
+.banner-menu .content:before {
+  background: rbga(100, 100, 100, 0.5);
+  bottom: 0;
+  content: "";
+  height: 15%;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&amp;0+0,1+100 */
+  background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#ffffff', GradientType=0);
+  /* IE6-9 */
+}
 .banner-menu ul {
   display: flex;
   height: 100%;
@@ -261,6 +295,7 @@ footer .social {
 .banner-menu ul li {
   bottom: -88%;
   flex: 1;
+  margin-right: -0.2%;
   pointer-events: none;
   position: relative;
 }
@@ -409,11 +444,17 @@ aside {
 }
 /*-----PODIUM------*/
 .podium li {
-  background: #fafafa;
+  background: #eeedee;
   margin: 30px 1%;
   padding: 20px;
   text-transform: uppercase;
   width: 47%;
+}
+.podium li a {
+  color: #4a484c;
+}
+.podium li a:hover p {
+  text-decoration: underline;
 }
 .podium li h2 {
   background: #c8c6c8;
