--- a/styles/style.less
+++ b/styles/style.less
@@ -8,6 +8,16 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+	font-family: 'icon';
+	src:url('../fonts/icomoon.eot?7bdlzk');
+	src:url('../fonts/icomoon.eot?7bdlzk#iefix') format('embedded-opentype'),
+		url('../fonts/icomoon.ttf?7bdlzk') format('truetype'),
+		url('../fonts/icomoon.woff?7bdlzk') format('woff'),
+		url('../fonts/icomoon.svg?7bdlzk#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
 
 /*variables*/
 
@@ -29,7 +39,36 @@
 
 @img: "../images/";
 
+@championship-icon: "\e900";
+@events-icon: "\e901";
+@news-icon: "\e904";
+@podium-icon: "\e905";
+
+.icon-facebook:before {
+	content: "\e902";
+}
+.icon-home:before {
+	content: "\e903";
+}
+
+.icon-twitter:before {
+	content: "\e906";
+}
+
 /*-------mixins------*/
+.font-icon() {
+  font-family: 'icon' !important;
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
 .border-radius( @a: 5px ) {
   -webkit-border-radius: @a;
   -moz-border-radius: @a;
@@ -115,7 +154,7 @@ header {
   .logo {
     display: inline-block;
     vertical-align: middle;
-    width: 15%;
+    width: 10%;
   }
   nav {
     margin: 0 6%;
@@ -289,6 +328,23 @@ footer {
   margin: 40px 0;
   position: relative;
   text-align: center;
+  .content {
+    &:before {
+      background: rbga(100,100,100, .5);
+      bottom: 0;
+      content: "";
+      height: 15%;
+      left: 0;
+      position: absolute;
+      width: 100%;
+      /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&amp;0+0,1+100 */
+      background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+      background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+      background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+
+    }
+  }
   ul {
     display: flex;
     height: 100%;
@@ -298,6 +354,7 @@ footer {
     li {
       bottom: -88%;
       flex: 1;
+      margin-right: -.2%;
       pointer-events: none;
       position: relative;
       &:before {
@@ -473,11 +530,17 @@ aside {
 /*-----PODIUM------*/
 .podium {
   li {
-    background: lighten(@primary-color, 20);
+    background: lighten(@primary-color, 15);
     margin: 30px 1%;
     padding: 20px;
     text-transform: uppercase;
     width: 47%;
+    a {
+      color: @secondary-color;
+      &:hover p {
+        text-decoration: underline;
+      }
+    }
     h2 {
       background: @primary-color;
       font-size: 18px;
