--- a/styles/style.less
+++ b/styles/style.less
@@ -719,7 +719,10 @@ aside {
   &.pilates .content {
     border-top: 10px solid @pilates-color;
   }
-
+  img {
+    display: block;
+    margin: 0 auto;
+  }
 }
 /*------CONTATO----------*/
 .contact {
@@ -1076,6 +1079,7 @@ aside {
   }
 }
 #owl-demo .item {
+  cursor: pointer;
   margin: 3px;
 }
 #owl-demo .item img {
