--- a/styles/style.css
+++ b/styles/style.css
@@ -285,22 +285,21 @@ footer .social {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#ffffff', GradientType=0);
   /* IE6-9 */
 }
-.banner-menu ul {
+.banner-menu > ul {
   display: flex;
   height: 100%;
-  margin-left: 0.08%;
+  margin-left: 0.1%;
   position: absolute;
   top: 0;
   width: 100%;
 }
-.banner-menu ul li {
+.banner-menu > ul li {
   bottom: -88%;
   flex: 1;
-  margin-right: -0.2%;
   pointer-events: none;
   position: relative;
 }
-.banner-menu ul li:before {
+.banner-menu > ul li:before {
   content: "";
   height: 5px;
   left: 0;
@@ -308,7 +307,7 @@ footer .social {
   top: -88%;
   width: 100%;
 }
-.banner-menu ul li a {
+.banner-menu > ul li a {
   color: #ffffff;
   display: block;
   font-size: 26px;
@@ -317,61 +316,61 @@ footer .social {
   pointer-events: auto;
   text-transform: uppercase;
 }
-.banner-menu ul li:first-child a {
+.banner-menu > ul li:first-child a {
   margin-left: 0;
 }
-.banner-menu ul .taekwon-do:before {
+.banner-menu > ul .taekwon-do:before {
   background: #53a7b2;
 }
-.banner-menu ul .taekwon-do a {
+.banner-menu > ul .taekwon-do a {
   background: #53a7b2;
 }
-.banner-menu ul .taekwon-do a:hover {
+.banner-menu > ul .taekwon-do a:hover {
   background: #76b9c2;
 }
-.banner-menu ul .jiu-jitsu:before {
+.banner-menu > ul .jiu-jitsu:before {
   background: #f98654;
 }
-.banner-menu ul .jiu-jitsu a {
+.banner-menu > ul .jiu-jitsu a {
   background: #f98654;
 }
-.banner-menu ul .jiu-jitsu a:hover {
+.banner-menu > ul .jiu-jitsu a:hover {
   background: #fba985;
 }
-.banner-menu ul .muay-thai:before {
+.banner-menu > ul .muay-thai:before {
   background: #aed24e;
 }
-.banner-menu ul .muay-thai a {
+.banner-menu > ul .muay-thai a {
   background: #aed24e;
 }
-.banner-menu ul .muay-thai a:hover {
+.banner-menu > ul .muay-thai a:hover {
   background: #c1dc77;
 }
-.banner-menu ul .taefit:before {
+.banner-menu > ul .taefit:before {
   background: #a27db1;
 }
-.banner-menu ul .taefit a {
+.banner-menu > ul .taefit a {
   background: #a27db1;
 }
-.banner-menu ul .taefit a:hover {
+.banner-menu > ul .taefit a:hover {
   background: #b99dc4;
 }
-.banner-menu ul .yoga:before {
+.banner-menu > ul .yoga:before {
   background: #a8777b;
 }
-.banner-menu ul .yoga a {
+.banner-menu > ul .yoga a {
   background: #a8777b;
 }
-.banner-menu ul .yoga a:hover {
+.banner-menu > ul .yoga a:hover {
   background: #bc9699;
 }
-.banner-menu ul .pilates:before {
+.banner-menu > ul .pilates:before {
   background: #03acec;
 }
-.banner-menu ul .pilates a {
+.banner-menu > ul .pilates a {
   background: #03acec;
 }
-.banner-menu ul .pilates a:hover {
+.banner-menu > ul .pilates a:hover {
   background: #26c1fc;
 }
 aside {
@@ -787,10 +786,10 @@ aside {
   z-index: 1001;
 }
 /*-----MODALIDADES-------*/
-.main.modalities .banner-menu ul {
+.main.modalities .banner-menu > ul {
   height: auto;
 }
-.main.modalities .banner-menu ul li:before {
+.main.modalities .banner-menu > ul li:before {
   display: none;
 }
 .main.modalities .banner-menu .info {
@@ -844,6 +843,7 @@ aside {
 .main.modalities .banner-menu .info .calories-spent {
   color: #ffffff;
 }
+.main.modalities .banner-menu .info .calories-spent ul,
 .main.modalities .banner-menu .info .calories-spent span {
   background: url("../images/sprite.png") no-repeat;
   display: inline-block;
@@ -851,9 +851,23 @@ aside {
   height: 80px;
   margin-bottom: 20px;
   padding: 10px 20px 10px 70px;
+  position: relative;
   text-align: center;
   width: 45%;
 }
+.main.modalities .banner-menu .info .calories-spent ul li,
+.main.modalities .banner-menu .info .calories-spent span li {
+  display: none;
+}
+.main.modalities .banner-menu .info .calories-spent ul .active,
+.main.modalities .banner-menu .info .calories-spent span .active {
+  display: block;
+  margin-left: 20px;
+  pointer-events: none;
+  position: absolute;
+  top: 10px;
+}
+.main.modalities .banner-menu .info .calories-spent ul em,
 .main.modalities .banner-menu .info .calories-spent span em {
   display: block;
   font-style: normal;
@@ -861,6 +875,9 @@ aside {
 }
 .main.modalities .banner-menu .info .calories-spent .time {
   background-position: 0 -44px;
+}
+.main.modalities .banner-menu .info .calories-spent .time li {
+  cursor: pointer;
 }
 .main.modalities .banner-menu .info .calories-spent .calories {
   background-position: 0 -163px;
@@ -1036,6 +1053,7 @@ aside {
 .jiu-jitsu.main.modalities .banner-menu .info button:hover {
   background: #fa976d;
 }
+.jiu-jitsu.main.modalities .banner-menu .info .calories-spent ul,
 .jiu-jitsu.main.modalities .banner-menu .info .calories-spent span {
   background-color: #f98654;
 }
@@ -1060,6 +1078,7 @@ aside {
 .taekwon-do.main.modalities .banner-menu .info button:hover {
   background: #65b0ba;
 }
+.taekwon-do.main.modalities .banner-menu .info .calories-spent ul,
 .taekwon-do.main.modalities .banner-menu .info .calories-spent span {
   background-color: #53a7b2;
 }
@@ -1084,6 +1103,7 @@ aside {
 .muay-thai.main.modalities .banner-menu .info button:hover {
   background: #b7d762;
 }
+.muay-thai.main.modalities .banner-menu .info .calories-spent ul,
 .muay-thai.main.modalities .banner-menu .info .calories-spent span {
   background-color: #aed24e;
 }
@@ -1108,6 +1128,7 @@ aside {
 .taefit.main.modalities .banner-menu .info button:hover {
   background: #ad8dbb;
 }
+.taefit.main.modalities .banner-menu .info .calories-spent ul,
 .taefit.main.modalities .banner-menu .info .calories-spent span {
   background-color: #a27db1;
 }
@@ -1132,6 +1153,7 @@ aside {
 .yoga.main.modalities .banner-menu .info button:hover {
   background: #b2878a;
 }
+.yoga.main.modalities .banner-menu .info .calories-spent ul,
 .yoga.main.modalities .banner-menu .info .calories-spent span {
   background-color: #a8777b;
 }
@@ -1156,6 +1178,7 @@ aside {
 .pilates.main.modalities .banner-menu .info button:hover {
   background: #0dbafc;
 }
+.pilates.main.modalities .banner-menu .info .calories-spent ul,
 .pilates.main.modalities .banner-menu .info .calories-spent span {
   background-color: #03acec;
 }
