--- a/styles/style.less
+++ b/styles/style.less
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'CenturyGothic';
   src: url('../font/CenturyGothic.eot?#iefix') format('embedded-opentype'),
@@ -1418,33 +1417,36 @@ aside {
   h1 {
     background: @primary-color;
     font-size: 18px;
-    margin: -34px auto 20px;
+    height: 40px;
+    margin: -45px auto 20px;
     padding: 5px 5px 5px 30px;
     position: relative;
     text-align: center;
     width: 50%;
     &:before,
     &:after {
-      border: 37px solid transparent;
-      border-bottom: 32px solid @primary-color;
+      border: 40px solid transparent;
+      border-bottom: 40px solid @primary-color;
       color: @primary-color;
       content: "";
       height: 0;
       position: absolute;
-      top: -37px;
+      top: -40px;
       width: 0;
     }
     &:before {
-      left: -37px;
+      left: -40px;
     }
     &:after {
-      right: -37px;
+      right: -40px;
     }
     i {
+      display: inline-block;
+      vertical-align: middle;
       &::before {
         .font-icon();
         content: "\e905";
-        font-size: 23px;
+        font-size: 30px;
       }
     }
   }
@@ -1487,12 +1489,14 @@ aside {
   padding: 10px;
   position: relative;
   >img {
+    left: 0;
     position: absolute;
+    top: 0;
     z-index: -1;
   }
   h1 {
     color: @invert-color;
-    font-size: 20px;
+    font-size: 26px;
     padding: 10px;
     text-align: center;
     text-transform: uppercase;
@@ -1510,7 +1514,10 @@ aside {
     h2 {
       padding: 5px;
       text-align: center;
-      text-transform: uppercase;
+      strong {
+        font-weight: normal;
+        text-transform: uppercase;
+      }
     }
     .description {
       display: block;
